# Spoke

./: .gitignore  ARCHITECTURE.md  BUILD.md  Mosaic Shape.dc.html  README.md  SPOKE.md  mosaic-handoff.html
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: gen_icons.py
src-tauri/src/: audio.rs  config.rs  hotkey.rs  inject.rs  lib.rs  main.rs  permissions.rs  platform.rs
src-tauri/src/stt/: google.rs  mod.rs  whisper.rs
ui/: index.html  main.js  style.css
