[package]
name = "spoke"
version = "0.1.0"
description = "Cross-platform voice-to-text dictation for the desktop"
authors = ["Spoke"]
edition = "2021"
rust-version = "1.77"

[lib]
# Tauri mobile expects a cdylib; desktop uses the rlib. Harmless on desktop.
name = "spoke_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio capture + WAV encoding
cpal = "0.15"
hound = "3.5"

# Text injection
enigo = "0.2"

# Clipboard access
arboard = { version = "3", features = ["wayland-data-control"] }

# Online STT (Google Cloud Speech-to-Text v2)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Async stream processing (model download) — only needed by whisper builds
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

# Zip extraction (CoreML bundle download) — only needed by coreml builds
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

# Misc
anyhow = "1"
thiserror = "2"
dirs = "5"

# Offline STT — heavy native build (whisper.cpp + cmake). Opt in with `--features whisper`.
whisper-rs = { version = "0.16", optional = true }

# Direct GTK access for atomic window move+resize — already in the tree
# transitively via tauri/tao, so this adds no new builds. Version must track
# tao's gtk (0.18 for tauri 2).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
# Already in the tree transitively via tauri/wry. Direct dep so run() can
# reach WebKitSettings and disable the damage-propagation feature (the
# feature-list API itself is newer than the crate's bindings, so it is
# called over FFI; see disable_damage_propagation()).
webkit2gtk = "2.0"

# macOS permission queries (mic TCC status, Accessibility trust) — already in
# the tree transitively via tauri, so this adds no new builds.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
block2 = "0.6"

[features]
default = []

# ---- Capability flags -------------------------------------------------------
# Enable local Whisper transcription. Requires cmake + a C/C++ toolchain.
whisper = ["dep:whisper-rs", "dep:futures-util"]
# Apple GPU acceleration via Metal. Implies `whisper`. macOS only —
# non-macOS builds fail with a compile error (see src/platform.rs).
metal = ["whisper", "whisper-rs/metal"]
# Apple Neural Engine acceleration via CoreML. Implies `whisper`. macOS only.
# The encoder bundle is downloaded at runtime via the in-app Download button.
coreml = ["whisper", "whisper-rs/coreml", "dep:zip"]
# NVIDIA GPU acceleration. Implies `whisper`. Requires the CUDA toolkit (nvcc)
# at build time. Linux/Windows only.
cuda = ["whisper", "whisper-rs/cuda"]
# AMD/Intel/NVIDIA GPU acceleration via Vulkan. Implies `whisper`.
# Linux/Windows only.
vulkan = ["whisper", "whisper-rs/vulkan"]

# ---- Platform presets -------------------------------------------------------
# One flag per shipping target. These are the flags release builds should use;
# each expands to exactly the capabilities that platform supports, and
# src/platform.rs rejects impossible OS/backend combinations at compile time,
# so a preset can never leave another platform's code in the binary.
platform-macos = ["whisper", "metal", "coreml"]
platform-linux-cuda = ["whisper", "cuda"]
platform-linux-vulkan = ["whisper", "vulkan"]
platform-linux-cpu = ["whisper"]
platform-windows-cuda = ["whisper", "cuda"]
platform-windows-vulkan = ["whisper", "vulkan"]
platform-windows-cpu = ["whisper"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
